--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build and publish Docker container
+name: Build, package and release plugin
 
 on:
   workflow_dispatch:
@@ -28,14 +28,6 @@ jobs:
             letsencrypt-cpanel-${{ env.PLUGIN_VERSION }}.i386.rpm
             letsencrypt-cpanel_${{ env.PLUGIN_VERSION }}_amd64.deb
             letsencrypt-cpanel_${{ env.PLUGIN_VERSION }}_i386.deb
-
-      - uses: docker/build-push-action@v4
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
 
 permissions:
   contents: write
